# eco

./: .eslintrc.cjs  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  DECISIONS_INSTALADOR.md  QUESTIONS_FOR_MAX.md  README.md  SDD_Grabador_Reuniones_Local.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
e2e/: app.spec.ts
native/: Cargo.toml
native/src/: capture.rs  main.rs  protocol.rs
python/: audio_io.py  compat.py  integration_smoke.py  requirements.txt  smoke_transcribe.py  test_worker.py  worker.py
python/eval/: metrics.py  test_metrics.py
resources/: README.md  prepare-eco.ps1  requirements-lock.txt
scripts/: fetch-uv.ps1  setup-windows.ps1
src/main/: bootstrap.ts  envManager.ts  firstRun.ts  hf.ts  index.ts  logger.ts  meetingDetector.ts  ollamaManager.ts  orchestrator.test.ts  orchestrator.ts  paths.ts  secrets.ts  services.ts  speakerNames.test.ts  speakerNames.ts  tray.ts  updater.ts  widget.ts
src/main/capture/: captureController.ts
src/main/hardware/: backendSelector.ts  detect.ts  hardware.test.ts
src/main/import/: audioImport.ts
src/main/ipc/: handlers.ts
src/main/lib/: retry.test.ts  retry.ts
src/main/persistence/: betterSqliteDriver.ts  db.ts  driver.ts  index.ts  jobRepository.ts  migrations.ts  nodeSqliteDriver.ts  persistence.test.ts  projectRepository.ts  projects.test.ts  (+4 more)
src/preload/: index.ts
src/renderer/: index.html
src/shared/: ipc.ts  providers.ts  speakers.test.ts  speakers.ts  types.ts
(+26 files in other folders)
